--- a/index.html
+++ b/index.html
@@ -14118,7 +14118,7 @@ input[type="text"] {
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.png);"></div>
+							<div class="profile-thumb" style="background: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/user-3.png?raw=true);"></div>
 							<h1><span>Abhishek Kumar</span></h1>
 							<h3><span>Web Developer / Blogger</span></h3>
 							<p>
@@ -14380,7 +14380,7 @@ Kanpur, India</span></li>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-1.png?raw=true);">
 						<div class="desc">
 							<h3>Augmented Reality Applications</h3>
 							<span>Project</span>
@@ -14388,7 +14388,7 @@ Kanpur, India</span></li>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-2.png?raw=true);">
 						<div class="desc">
 							<h3>AR Chess Game</h3>
 							<span>Project</span>
@@ -14396,7 +14396,7 @@ Kanpur, India</span></li>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-3.png?raw=true);">
 						<div class="desc">
 							<h3>AR Image Gallery</h3>
 							<span>Project</span>
@@ -14404,7 +14404,7 @@ Kanpur, India</span></li>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-4.png?raw=true);">
 						<div class="desc">
 							<h3>AR Video Player</h3>
 							<span>Project</span>
@@ -14412,7 +14412,7 @@ Kanpur, India</span></li>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-5.png?raw=true);">
 						<div class="desc">
 							<h3>AR Business Card</h3>
 							<span>Project</span>
@@ -14420,7 +14420,7 @@ Kanpur, India</span></li>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.png);">
+					<a href="#" class="work" style="background-image: url(https://github.com/2Abhi000/Abhishe/blob/gh-pages/portfolio-6.png?raw=true);">
 						<div class="desc">
 							<h3>Times App</h3>
 							<span>Project</span>
